<resources>
    <string name="app_name">Venda de Coleções de Gibi</string>
    <string name="app_text">Bem-vindo!</string>
    <string name="app_description">Utilize o menu para gerenciar clientes, coleções e pedidos de gibis.</string>
    <string name="button_add">Adicionar</string>
    <string name="button_clear">Limpar</string>
    <string name="button_finish">Finalizar</string>
    <string name="button_order">Novo Pedido</string>
    <string name="database_search">Buscar</string>
    <string name="database_register">Cadastrar</string>
    <string name="database_update">Atualizar</string>
    <string name="database_remove">Remover</string>
    <string name="database_list">Listar</string>
    <string name="cliente_label">Cliente</string>
    <string name="cliente_id_label">ID:</string>
    <string name="cliente_id">001</string>
    <string name="cliente_nome_label">Nome:</string>
    <string name="cliente_nome">João da Silva</string>
    <string name="cliente_endereco_label">Endereço:</string>
    <string name="cliente_endereco">Rua das Flores, 123, São Paulo, SP</string>
    <string name="cliente_telefone_label">Telefone:</string>
    <string name="cliente_telefone">11987654321</string>
    <string name="cliente_cnpj_label">CNPJ:</string>
    <string name="cliente_cnpj">12.345.678/0001-90</string>
    <string name="colecao_label">Coleção de Gibi</string>
    <string name="colecao_id_label">ID:</string>
    <string name="colecao_id">001</string>
    <string name="colecao_nome_label">Nome:</string>
    <string name="colecao_nome">Coleção Batman Clássico</string>
    <string name="colecao_preco_label">Preço:</string>
    <string name="colecao_preco">45.0</string>
    <string name="colecao_editora_label">Editora:</string>
    <string name="colecao_editora">Editora DC Comics</string>
    <string name="pedido_label">Pedido</string>
    <string name="pedido_cliente_id_label">ID do Cliente:</string>
    <string name="pedido_cliente_id">001</string>
    <string name="pedido_colecao_id_label">ID da Coleção:</string>
    <string name="pedido_colecao_id">002</string>
    <string name="pedido_quantidade_label">Quantidade:</string>
    <string name="pedido_quantidade">005</string>
</resources>
